...
  static String appTermsAndPoliciesText = "Application Terms & Policies";
  static String addressText = "Address";
  static String addText = "Add";
  static String addAddressText = "Add Address";
  static String addressLine1Text = "Address Line 1";
...
  static String addNewOfferText = "Add New Offer";
  static String activeOrderText = "Active Orders";
  static String activeText = "Active";
  static String archiveText = "Archive";
  static String addANewStoreText = "Add a new store";
...
  static String alertText = "Alert";
  static String addNewRoleText = "Add New Role";
  static String amountText = "Amount";
  static String amountToBeAddedText = "Amount to be added";
  static String addDescriptionText = "Add Description";
...
  static String authenticationText = "Authentication";
  static String authenticatedText = "authenticated";
  static String addCardText = "Add Card";
  static String addNewCardText = "Add New Card";
  static String autoReloadIntoWalletText = "Auto Reload into Wallet";
  static String addCardPaymentMethodsText = "Add Cards / Payment Methods";
  static String addBankAccountDebitMethodsText =
      "Add Bank Account / Debit Methods";
...
  static String connectAccountText = "Connect Account";
  static String confirmSelectionText = "Confirm Selection";
  static String cardNumberText = "Card Number";
  static String createYourAccountText = "Create your Account";
  static String createStripeAccountText = "Create Stripe Account";
...
  static String categoriesNameText = "Categories Name";
  static String categoryNameText = "Category Name";
  static String categoriesText = "Categories";
  static String completedOrders = "Completed Orders";
  static String contactText = "Contact Store";
...
  static String cancelText = "Cancel";
  static String canceReturnlText = "Cancel Return";
  static String cancelledText = "Cancelled";
  static String createYourText = "Create your";
  static String checkOutText = "Check Out";
  static String clickCollectText = "Click & Collect";
  static String completedText = "Completed";
  static String completeText = "Complete";
  static String completeReturnOrderText = "Complete Return Order";
  static String cancelOrderText = "Cancel Order";
...
  static String companyText = "Company";
  static String claimStoreText = "Claim Store";
  static String cardText = "Card";
  static String createMembershipText = "Create Membership";
  static String cartItemReplaceText =
...
  static String firstNameText = "First Name";
  static String faceIdText = "Face ID";
  static String favoriteText = "Favorite";
  static String favoritesText = "Favorites";
  static String fromWherePhotoText =
...
  static String payAPersonText = "P2P";
  static String payABusinessText = "P2B";
  static String munchiesText = "Munchies";
  static String herbsText = "Herbs";
  static String paymentsText = "Payments";
  static String storeTypeText = "Store Type";
  static String generalStoreTypeText = "General";
...

  //L
  static String loginYourAccountText = "Login your account";
  static String loginText = "Login";
  static String lastNameText = "Last Name";
...
      '. Message and data rates may apply.';
  static String moreText = "More";
  static String manageText = "Manage";
  static String menuText = "Menu";
  static String mobileText = "Mobile";
  static String myStoreText = "My Store";
  static String manageStoreText = "Manage Store";
...
  static String membershipIdText = "Membership Id";
  static String membershipTransactionText = "Membership Transaction";
  static String manageWalletText = "Manage Wallet";

  //N
...
  static String notNowText = "Not now";
  static String noMemberText = "No Member";
  static String nearbyText = "Nearby";
  static String nearYouText = " near you";
  static String notificationPreferencesText = "Notification Preferences";
...
  static String profileText = "Profile";
  static String passcodeLockText = "Passcode Lock";
  static String previousText = "Previous";
  static String periodicallyText = "Periodically";
  static String phoneNumberText = "Phone Number";
...
  static String storesText = "Stores";
  static String storeHoursText = "Store hours: 24/7 hours";
  static String storeHourText = "Store Hours";
  static String successText = "Success";
  static String sendConfirmationCodeText = "Send Confirmation Code";
  static String securityText = "Security";
  static String searchForStoreText = "Search for Store";
...
  static String shortDescriptionText = "Short Description";
  static String searchOrdersHintText = "Search by order ID or customer name";
  static String scanOrderBarcodeText = "Scan Order Barcode";
  static String showOrderQRText = "Pickup / QR code";
  static String showQrAtStoreText =
...
  static String theGreenMallText = "the green mall";
  static String theGreenMallTitleText = "thegreenmall";
  static String totalBalanceText = "Total Balance";
  static String thresholdText = "Threshold";
  static String theGreenMallAppNameText = "The Green Mall";
...

  //V
  static String verificationCodeText = "Verification code";
  static String verificationCodeSentText =
      "We have sent the code verification to your mobile number ";
...
  static String walletText = "Wallet";
  static String welcomeText = "Welcome";
  static String welcomeToText = "Welcome to";
  static String weightText = "Weight";
  static String workingDaysText = "Working Days";
...
